# Apriltag

./: README.md
apriltag_detector/: CMakeLists.txt  README.md
apriltag_detector/include/: apriltags.h  manager.h
apriltag_detector/launch/: usb_cam_apriltags.launch
apriltag_detector/src/: apriltags.cpp  main.cpp
apriltag_umich/src/: apriltag.h
